2004-08-24 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_attach.cc, cli/cmd_attach.h, cli/cmd_symbol.cc,
	  cli/cmd_symbol.h, cli/expr.cc, cli/expr.h, cli/parse.yy,
	  cli/scan.ll, src/stimuli.cc, src/stimuli.h, src/symbol.h:
	The attach command can now accept a list of symbols. Also,
	Nodes and stimuli are now added to the symbol table whenever
	they're constructed.

2004-08-19 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc: writeTT and readTT were not initialized
	in Processor constructor.

2004-08-18 Scott Dattalo <scott@dattalo.com>
	* src/registers.cc, src/registers.h, src/symbol.cc,
	  src/symbol.h, src/trace.cc, src/trace.h, cli/cmd_symbol.cc,
	  cli/cmd_symbol.h, cli/expr.cc, cli/expr.h, cli/parse.yy,
	  cli/scan.ll:
	More improvements to tracing.
	Added some more symbolic command line processing.


2004-08-16 Scott Dattalo <scott@dattalo.com>
	* src/trace.cc, src/trace.h:
	CVS was broken.

2004-08-16 Scott Dattalo <scott@dattalo.com>
	* src/intcon.cc, src/intcon.h, src/processor.h, src/trace.cc
	src/trace.h, src/value.h:
	Trace stuff *** CVS is broken at the moment but will be fixed
	within 3 hours of the time stamp of this change

2004-08-14 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.nsi: small changes
	* doc/gpsimWin32.html: documented GCC compilation

2004-08-13 Scott Dattalo <scott@dattalo.com>
	* src/14bit-processors.cc, src/14bit-registers.cc, src/14bit-registers.h
	src/14bit-tmrs.cc, src/16bit-registers.cc, src/eeprom.cc, src/intcon.cc,
	src/ioports.cc, src/p16x7x.cc, src/pic-processor.cc,
	src/pic-registers.cc, src/pie.cc, src/pir.cc, src/processor.cc,
	src/processor.h, src/registers.cc, src/registers.h, src/ssp.cc,
	src/tmr0.cc, src/trace.cc, src/trace.h, src/uart.cc:
	More Tracing. 

2004-08-11 Scott Dattalo <scott@dattalo.com>
	* src/trace.cc, src/trace.h, src/processor.cc, src/pic-processors.cc
	src/value.h, src/value.cc, src/registers.h, src/registers.cc, 
	14bit-registers.cc:
	More trace stuff.
	